--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -6,13 +6,16 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM1
-Mcu.IPNb=4
+Mcu.IP4=TIM4
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_ND
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PB13
 Mcu.Pin4=PB14
@@ -20,8 +23,8 @@ Mcu.Pin5=PB15
 Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
-Mcu.Pin9=VP_SYS_VS_ND
-Mcu.PinsNb=12
+Mcu.Pin9=PB9
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -36,6 +39,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
@@ -64,6 +68,8 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB15.Locked=true
 PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
+PB9.Locked=true
+PB9.Signal=S_TIM4_CH4
 PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_ModeDefaultOutputPP
 PC13-TAMPER-RTC.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PC13-TAMPER-RTC.Locked=true
@@ -110,25 +116,27 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=500000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=4000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=2000000
-RCC.APB1TimFreq_Value=4000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=1000000
+RCC.APB1TimFreq_Value=2000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV4
 RCC.APB2Freq_Value=1000000
 RCC.APB2TimFreq_Value=2000000
 RCC.FCLKCortexFreq_Value=4000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=4000000
-RCC.IPParameters=ADCFreqValue,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=64000000
 RCC.PLLCLKFreq_Value=64000000
 RCC.PLLMCOFreq_Value=32000000
 RCC.PLLMUL=RCC_PLL_MUL8
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=4000000
@@ -140,6 +148,8 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM4_CH4.0=TIM4_CH4,Output Compare4 CH4
+SH.S_TIM4_CH4.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -150,10 +160,18 @@ TIM1.Prescaler=20-1
 TIM1.Pulse-PWM\ Generation1\ CH1=1-1
 TIM1.Pulse-PWM\ Generation2\ CH2=1-1
 TIM1.Pulse-PWM\ Generation3\ CH3=1-1
+TIM4.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
+TIM4.IPParameters=Prescaler,Period,OCMode_4,Channel-Output Compare4 CH4,Pulse-Output Compare4 CH4
+TIM4.OCMode_4=TIM_OCMODE_TOGGLE
+TIM4.Period=65536-1
+TIM4.Prescaler=2-1
+TIM4.Pulse-Output\ Compare4\ CH4=1136
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
