--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -12,10 +12,14 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=VP_SYS_VS_ND
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=PB8
+Mcu.Pin13=PB9
+Mcu.Pin14=VP_SYS_VS_ND
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PB13
 Mcu.Pin4=PB14
@@ -23,8 +27,8 @@ Mcu.Pin5=PB15
 Mcu.Pin6=PA8
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
-Mcu.Pin9=PB9
-Mcu.PinsNb=14
+Mcu.Pin9=PB5
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -32,6 +36,7 @@ MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -68,6 +73,22 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB15.Locked=true
 PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_ModeDefaultEXTI
+PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB5.Locked=true
+PB5.Signal=GPXTI5
+PB6.GPIOParameters=GPIO_ModeDefaultEXTI
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB6.Locked=true
+PB6.Signal=GPXTI6
+PB7.GPIOParameters=GPIO_ModeDefaultEXTI
+PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB7.Locked=true
+PB7.Signal=GPXTI7
+PB8.GPIOParameters=GPIO_ModeDefaultEXTI
+PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB8.Locked=true
+PB8.Signal=GPXTI8
 PB9.Locked=true
 PB9.Signal=S_TIM4_CH4
 PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_ModeDefaultOutputPP
@@ -142,6 +163,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=4000000
 RCC.USBFreq_Value=64000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
