MX:assign all buttons, leds and battery sense
Signed-off-by: Long Vy. Dang <vylong93khtn@gmail.com>

--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -1,34 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=TIM4
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=TIM4
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=PB8
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_ND
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PB13
-Mcu.Pin4=PB14
-Mcu.Pin5=PB15
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PB5
-Mcu.PinsNb=18
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_ND
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -36,6 +51,7 @@ MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -46,52 +62,112 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=BATT_SENSE
+PA1.Locked=true
+PA1.Signal=ADCx_IN1
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=BLUE_CHANNEL
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
+PA2.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA2.GPIO_Label=LED1
+PA2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA3.GPIO_Label=LED3
+PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=RED_CHANNEL
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=GREEN_CHANNEL
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB13.GPIO_PuPd=GPIO_NOPULL
-PB13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB0.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB0.GPIO_Label=LED5
+PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB1.GPIO_Label=LED7
+PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB10.GPIO_Label=LED2
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB11.GPIO_Label=LED4
+PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.GPIO_Label=LED6
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB13.GPIO_Label=BUTTON5
+PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.Locked=true
-PB13.PinState=GPIO_PIN_SET
-PB13.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB14.GPIO_PuPd=GPIO_NOPULL
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB13.Signal=GPXTI13
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB14.GPIO_Label=BUTTON6
+PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
-PB14.PinState=GPIO_PIN_SET
-PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
-PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB15.GPIO_PuPd=GPIO_NOPULL
-PB15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB14.Signal=GPXTI14
+PB15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB15.GPIO_Label=BUTTON7
+PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
-PB15.PinState=GPIO_PIN_SET
-PB15.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_ModeDefaultEXTI
+PB15.Signal=GPXTI15
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB5.GPIO_Label=BUTTON4
 PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.Signal=GPXTI5
-PB6.GPIOParameters=GPIO_ModeDefaultEXTI
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB6.GPIO_Label=BUTTON2
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPXTI6
-PB7.GPIOParameters=GPIO_ModeDefaultEXTI
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB7.GPIO_Label=BUTTON3
 PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Locked=true
 PB7.Signal=GPXTI7
-PB8.GPIOParameters=GPIO_ModeDefaultEXTI
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PB8.GPIO_Label=BUTTON1
 PB8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
 PB8.Signal=GPXTI8
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=BUZZER
 PB9.Locked=true
 PB9.Signal=S_TIM4_CH4
-PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_ModeDefaultOutputPP
+PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC13-TAMPER-RTC.GPIO_Label=LED_ONBOARD
 PC13-TAMPER-RTC.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.PinState=GPIO_PIN_RESET
@@ -137,7 +213,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.ADCFreqValue=500000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=4000000
@@ -163,6 +239,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=4000000
 RCC.USBFreq_Value=64000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
