--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -11,39 +11,43 @@ Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM4
-Mcu.IPNb=6
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM4
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PB5
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin10=PB1
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_ND
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_ND
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=26
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -82,6 +86,21 @@ PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA3.Locked=true
 PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=LATCH_7SEG
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=CLOCK_7SEG
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Signal=SPI1_SCK
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=DATA_7SEG
+PA7.Mode=TX_Only_Simplex_Unidirect_Master
+PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=RED_CHANNEL
 PA8.Locked=true
@@ -213,20 +232,20 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADCFreqValue=500000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV8
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV16
 RCC.AHBFreq_Value=4000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=1000000
 RCC.APB1TimFreq_Value=2000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV4
-RCC.APB2Freq_Value=1000000
-RCC.APB2TimFreq_Value=2000000
+RCC.APB2Freq_Value=4000000
+RCC.APB2TimFreq_Value=4000000
 RCC.FCLKCortexFreq_Value=4000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=4000000
-RCC.IPParameters=ADCFreqValue,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=64000000
 RCC.PLLCLKFreq_Value=64000000
 RCC.PLLMCOFreq_Value=32000000
@@ -263,13 +282,19 @@ SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM4_CH4.0=TIM4_CH4,Output Compare4 CH4
 SH.S_TIM4_CH4.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,OCMode_PWM-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM1
 TIM1.Period=256-1
-TIM1.Prescaler=20-1
+TIM1.Prescaler=40-1
 TIM1.Pulse-PWM\ Generation1\ CH1=1-1
 TIM1.Pulse-PWM\ Generation2\ CH2=1-1
 TIM1.Pulse-PWM\ Generation3\ CH3=1-1
