Sync up pins with layout
Signed-off-by: Long Vy. Dang <vylong93khtn@gmail.com>

--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -75,13 +75,13 @@ PA10.GPIO_Label=BLUE_CHANNEL
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
 PA2.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA2.GPIO_Label=LED1
+PA2.GPIO_Label=RGB_LED1
 PA2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PA3.GPIO_Label=LED3
+PA3.GPIO_Label=RGB_LED2
 PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA3.Locked=true
@@ -110,37 +110,37 @@ PA9.GPIO_Label=GREEN_CHANNEL
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB0.GPIO_Label=LED5
+PB0.GPIO_Label=RGB_LED3
 PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB1.GPIO_Label=LED7
+PB1.GPIO_Label=RGB_LED4
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB10.GPIO_Label=LED2
+PB10.GPIO_Label=RGB_LED5
 PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB10.Locked=true
 PB10.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB11.GPIO_Label=LED4
+PB11.GPIO_Label=RGB_LED6
 PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB11.Locked=true
 PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB12.GPIO_Label=LED6
+PB12.GPIO_Label=RGB_LED7
 PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB13.GPIO_Label=BUTTON5
+PB13.GPIO_Label=BUTTON7
 PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB13.GPIO_PuPd=GPIO_PULLUP
 PB13.Locked=true
@@ -152,7 +152,7 @@ PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
 PB14.Signal=GPXTI14
 PB15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB15.GPIO_Label=BUTTON7
+PB15.GPIO_Label=BUTTON5
 PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB15.GPIO_PuPd=GPIO_PULLUP
 PB15.Locked=true
@@ -164,13 +164,13 @@ PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB6.GPIO_Label=BUTTON2
+PB6.GPIO_Label=BUTTON3
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPXTI6
 PB7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB7.GPIO_Label=BUTTON3
+PB7.GPIO_Label=BUTTON2
 PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.Locked=true
