--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -74,17 +74,21 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=BLUE_CHANNEL
 PA10.Locked=true
 PA10.Signal=S_TIM1_CH3
-PA2.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA2.GPIO_Label=RGB_LED1
 PA2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
 PA2.Signal=GPIO_Output
-PA3.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA3.GPIO_Label=RGB_LED2
 PA3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA3.Locked=true
+PA3.PinState=GPIO_PIN_SET
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=LATCH_7SEG
@@ -109,35 +113,45 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=GREEN_CHANNEL
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
-PB0.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB0.GPIO_Label=RGB_LED3
 PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB1.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB1.GPIO_Label=RGB_LED4
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
 PB1.Signal=GPIO_Output
-PB10.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB10.GPIO_Label=RGB_LED5
 PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB10.GPIO_PuPd=GPIO_PULLUP
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB11.GPIO_Label=RGB_LED6
 PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB11.GPIO_PuPd=GPIO_PULLUP
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB11.Locked=true
+PB11.PinState=GPIO_PIN_SET
 PB11.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB12.GPIO_Label=RGB_LED7
 PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB12.GPIO_PuPd=GPIO_PULLUP
 PB12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB13.GPIO_Label=BUTTON7
