--- a/ToyZero.ioc
+++ b/ToyZero.ioc
@@ -14,8 +14,9 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=TIM4
-Mcu.IPNb=7
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -39,15 +40,17 @@ Mcu.Pin24=PB9
 Mcu.Pin25=VP_SYS_VS_ND
 Mcu.Pin26=VP_SYS_VS_Systick
 Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM3_VS_no_output3
 Mcu.Pin3=PA1
+Mcu.Pin30=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=29
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -64,6 +67,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.GPIOParameters=GPIO_Label
@@ -312,6 +316,11 @@ TIM1.Prescaler=40-1
 TIM1.Pulse-PWM\ Generation1\ CH1=1-1
 TIM1.Pulse-PWM\ Generation2\ CH2=1-1
 TIM1.Pulse-PWM\ Generation3\ CH3=1-1
+TIM3.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM3.IPParameters=Channel-Output Compare3 No Output,Period,ClockDivision,Pulse-Output Compare3 No Output
+TIM3.Period=65536-1
+TIM3.Pulse-Output\ Compare3\ No\ Output=4000
 TIM4.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
 TIM4.IPParameters=Prescaler,Period,OCMode_4,Channel-Output Compare4 CH4,Pulse-Output Compare4 CH4
 TIM4.OCMode_4=TIM_OCMODE_TOGGLE
@@ -324,6 +333,10 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output3.Mode=Output Compare3 No Output
+VP_TIM3_VS_no_output3.Signal=TIM3_VS_no_output3
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
